parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASYNC
    AT
    AWAIT
    BREAK
    CONST
    CONTINUE
    CRATE
    DEDENT
    DOLLAR
    DOTDOTDOT
    DOTDOTEQ
    DYN
    ENUM
    EXTERN
    FALSE
    FATARROW
    IDENT
    IMPL
    LOOP
    MATCH
    MOD
    MOVE
    NOT
    OREQ
    PATHSEP
    PERCENTEQ
    POUND
    PUB
    RARROW
    REF
    SELFLOWERCASE
    SELFUPERCASE
    SHL
    SHLEQ
    SHR
    SHREQ
    STATIC
    STRUCT
    SUPER
    TILDE
    TRAIT
    TRUE
    TYPE
    UNDERSCORE
    UNION
    UNSAFE
    USE
    WHERE

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     program -> declvar
Rule 4     program -> declvar program
Rule 5     declvar -> LET assign SEMI
Rule 6     declvar -> LET MUT assign SEMI
Rule 7     funcdecl -> signature body
Rule 8     signature -> FN ID LEFTPARENTHESES sigparams RIGHTPARENTHESES
Rule 9     signature -> FN ID LEFTPARENTHESES RIGHTPARENTHESES
Rule 10    sigparams -> ID COLON tipo
Rule 11    sigparams -> ID COLON tipo COMMA sigparams
Rule 12    stms -> stm
Rule 13    stms -> stm stms
Rule 14    body -> LEFTBRACKET stms RIGHTBRACKET
Rule 15    bodyorstm -> stm
Rule 16    bodyorstm -> body
Rule 17    stm -> exp SEMI
Rule 18    stm -> WHILE exp bodyorstm
Rule 19    stm -> IF exp bodyorstm
Rule 20    stm -> IF exp bodyorstm ELSE stm
Rule 21    stm -> FOR ID IN stm2 body
Rule 22    stm -> FOR ID IN ID body
Rule 23    stm -> RETURN exp SEMI
Rule 24    stm2 -> LEFTPARENTHESES exp DOTDOT exp RIGHTPARENTHESES
Rule 25    stm2 -> LEFTPARENTHESES exp DOTDOT exp RIGHTPARENTHESES DOT ID LEFTPARENTHESES RIGHTPARENTHESES
Rule 26    exp -> exp PLUS exp
Rule 27    exp -> exp MINUS exp
Rule 28    exp -> exp STAR exp
Rule 29    exp -> exp CARET exp
Rule 30    exp -> exp SLASH exp
Rule 31    exp -> exp PERCENT exp
Rule 32    exp -> exp AND exp
Rule 33    exp -> exp OR exp
Rule 34    exp -> exp GE exp
Rule 35    exp -> exp GT exp
Rule 36    exp -> exp LE exp
Rule 37    exp -> exp LT exp
Rule 38    exp -> exp AS exp
Rule 39    exp -> exp IS exp
Rule 40    exp -> exp ISEXCLAMATION exp
Rule 41    exp -> exp EQEQ exp
Rule 42    exp -> exp NE exp
Rule 43    exp -> exp ANDAND exp
Rule 44    exp -> exp OROR exp
Rule 45    exp -> exp QUESTIONQUESTION exp
Rule 46    exp -> exp QUESTION exp COLON exp
Rule 47    exp -> exp EQ exp
Rule 48    exp -> exp STAREQ exp
Rule 49    exp -> exp SLASHEQ exp
Rule 50    exp -> exp PLUSEQ exp
Rule 51    exp -> exp MINUSEQ exp
Rule 52    exp -> exp ANDEQ exp
Rule 53    exp -> exp CARETEQ exp
Rule 54    exp -> call
Rule 55    exp -> assign
Rule 56    exp -> NUMBER
Rule 57    exp -> ID
Rule 58    call -> ID LEFTPARENTHESES params RIGHTPARENTHESES
Rule 59    call -> ID LEFTPARENTHESES RIGHTPARENTHESES
Rule 60    params -> exp COMMA params
Rule 61    params -> exp
Rule 62    assign -> ID EQ exp
Rule 63    tipo -> ITT
Rule 64    tipo -> UTT
Rule 65    tipo -> FTT
Rule 66    tipo -> STRING
Rule 67    tipo -> CHAR

Terminals, with rules where they appear

AND                  : 32
ANDAND               : 43
ANDEQ                : 52
AS                   : 38
ASYNC                : 
AT                   : 
AWAIT                : 
BREAK                : 
CARET                : 29
CARETEQ              : 53
CHAR                 : 67
COLON                : 10 11 46
COMMA                : 11 60
CONST                : 
CONTINUE             : 
CRATE                : 
DEDENT               : 
DOLLAR               : 
DOT                  : 25
DOTDOT               : 24 25
DOTDOTDOT            : 
DOTDOTEQ             : 
DYN                  : 
ELSE                 : 20
ENUM                 : 
EQ                   : 47 62
EQEQ                 : 41
EXTERN               : 
FALSE                : 
FATARROW             : 
FN                   : 8 9
FOR                  : 21 22
FTT                  : 65
GE                   : 34
GT                   : 35
ID                   : 8 9 10 11 21 22 22 25 57 58 59 62
IDENT                : 
IF                   : 19 20
IMPL                 : 
IN                   : 21 22
IS                   : 39
ISEXCLAMATION        : 40
ITT                  : 63
LE                   : 36
LEFTBRACKET          : 14
LEFTPARENTHESES      : 8 9 24 25 25 58 59
LET                  : 5 6
LOOP                 : 
LT                   : 37
MATCH                : 
MINUS                : 27
MINUSEQ              : 51
MOD                  : 
MOVE                 : 
MUT                  : 6
NE                   : 42
NOT                  : 
NUMBER               : 56
OR                   : 33
OREQ                 : 
OROR                 : 44
PATHSEP              : 
PERCENT              : 31
PERCENTEQ            : 
PLUS                 : 26
PLUSEQ               : 50
POUND                : 
PUB                  : 
QUESTION             : 46
QUESTIONQUESTION     : 45
RARROW               : 
REF                  : 
RETURN               : 23
RIGHTBRACKET         : 14
RIGHTPARENTHESES     : 8 9 24 25 25 58 59
SELFLOWERCASE        : 
SELFUPERCASE         : 
SEMI                 : 5 6 17 23
SHL                  : 
SHLEQ                : 
SHR                  : 
SHREQ                : 
SLASH                : 30
SLASHEQ              : 49
STAR                 : 28
STAREQ               : 48
STATIC               : 
STRING               : 66
STRUCT               : 
SUPER                : 
TILDE                : 
TRAIT                : 
TRUE                 : 
TYPE                 : 
UNDERSCORE           : 
UNION                : 
UNSAFE               : 
USE                  : 
UTT                  : 64
WHERE                : 
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

assign               : 5 6 55
body                 : 7 16 21 22
bodyorstm            : 18 19 20
call                 : 54
declvar              : 3 4
exp                  : 17 18 19 20 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 60 61 62
funcdecl             : 1 2
params               : 58 60
program              : 2 4 0
signature            : 7
sigparams            : 8 11
stm                  : 12 13 15 20
stm2                 : 21
stms                 : 13 14
tipo                 : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . LET assign SEMI
    (6) declvar -> . LET MUT assign SEMI
    (8) signature -> . FN ID LEFTPARENTHESES sigparams RIGHTPARENTHESES
    (9) signature -> . FN ID LEFTPARENTHESES RIGHTPARENTHESES

    LET             shift and go to state 5
    FN              shift and go to state 6

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    declvar                        shift and go to state 3
    signature                      shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . LET assign SEMI
    (6) declvar -> . LET MUT assign SEMI
    (8) signature -> . FN ID LEFTPARENTHESES sigparams RIGHTPARENTHESES
    (9) signature -> . FN ID LEFTPARENTHESES RIGHTPARENTHESES

    $end            reduce using rule 1 (program -> funcdecl .)
    LET             shift and go to state 5
    FN              shift and go to state 6

    funcdecl                       shift and go to state 2
    program                        shift and go to state 7
    declvar                        shift and go to state 3
    signature                      shift and go to state 4

state 3

    (3) program -> declvar .
    (4) program -> declvar . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . declvar
    (4) program -> . declvar program
    (7) funcdecl -> . signature body
    (5) declvar -> . LET assign SEMI
    (6) declvar -> . LET MUT assign SEMI
    (8) signature -> . FN ID LEFTPARENTHESES sigparams RIGHTPARENTHESES
    (9) signature -> . FN ID LEFTPARENTHESES RIGHTPARENTHESES

    $end            reduce using rule 3 (program -> declvar .)
    LET             shift and go to state 5
    FN              shift and go to state 6

    declvar                        shift and go to state 3
    program                        shift and go to state 8
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 4

state 4

    (7) funcdecl -> signature . body
    (14) body -> . LEFTBRACKET stms RIGHTBRACKET

    LEFTBRACKET     shift and go to state 10

    body                           shift and go to state 9

state 5

    (5) declvar -> LET . assign SEMI
    (6) declvar -> LET . MUT assign SEMI
    (62) assign -> . ID EQ exp

    MUT             shift and go to state 12
    ID              shift and go to state 13

    assign                         shift and go to state 11

state 6

    (8) signature -> FN . ID LEFTPARENTHESES sigparams RIGHTPARENTHESES
    (9) signature -> FN . ID LEFTPARENTHESES RIGHTPARENTHESES

    ID              shift and go to state 14


state 7

    (2) program -> funcdecl program .

    $end            reduce using rule 2 (program -> funcdecl program .)


state 8

    (4) program -> declvar program .

    $end            reduce using rule 4 (program -> declvar program .)


state 9

    (7) funcdecl -> signature body .

    LET             reduce using rule 7 (funcdecl -> signature body .)
    FN              reduce using rule 7 (funcdecl -> signature body .)
    $end            reduce using rule 7 (funcdecl -> signature body .)


state 10

    (14) body -> LEFTBRACKET . stms RIGHTBRACKET
    (12) stms -> . stm
    (13) stms -> . stm stms
    (17) stm -> . exp SEMI
    (18) stm -> . WHILE exp bodyorstm
    (19) stm -> . IF exp bodyorstm
    (20) stm -> . IF exp bodyorstm ELSE stm
    (21) stm -> . FOR ID IN stm2 body
    (22) stm -> . FOR ID IN ID body
    (23) stm -> . RETURN exp SEMI
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp STAR exp
    (29) exp -> . exp CARET exp
    (30) exp -> . exp SLASH exp
    (31) exp -> . exp PERCENT exp
    (32) exp -> . exp AND exp
    (33) exp -> . exp OR exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp LE exp
    (37) exp -> . exp LT exp
    (38) exp -> . exp AS exp
    (39) exp -> . exp IS exp
    (40) exp -> . exp ISEXCLAMATION exp
    (41) exp -> . exp EQEQ exp
    (42) exp -> . exp NE exp
    (43) exp -> . exp ANDAND exp
    (44) exp -> . exp OROR exp
    (45) exp -> . exp QUESTIONQUESTION exp
    (46) exp -> . exp QUESTION exp COLON exp
    (47) exp -> . exp EQ exp
    (48) exp -> . exp STAREQ exp
    (49) exp -> . exp SLASHEQ exp
    (50) exp -> . exp PLUSEQ exp
    (51) exp -> . exp MINUSEQ exp
    (52) exp -> . exp ANDEQ exp
    (53) exp -> . exp CARETEQ exp
    (54) exp -> . call
    (55) exp -> . assign
    (56) exp -> . NUMBER
    (57) exp -> . ID
    (58) call -> . ID LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> . ID LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> . ID EQ exp

    WHILE           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 22
    NUMBER          shift and go to state 25
    ID              shift and go to state 21

    stms                           shift and go to state 15
    stm                            shift and go to state 16
    exp                            shift and go to state 17
    call                           shift and go to state 23
    assign                         shift and go to state 24

state 11

    (5) declvar -> LET assign . SEMI

    SEMI            shift and go to state 26


state 12

    (6) declvar -> LET MUT . assign SEMI
    (62) assign -> . ID EQ exp

    ID              shift and go to state 13

    assign                         shift and go to state 27

state 13

    (62) assign -> ID . EQ exp

    EQ              shift and go to state 28


state 14

    (8) signature -> FN ID . LEFTPARENTHESES sigparams RIGHTPARENTHESES
    (9) signature -> FN ID . LEFTPARENTHESES RIGHTPARENTHESES

    LEFTPARENTHESES shift and go to state 29


state 15

    (14) body -> LEFTBRACKET stms . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 30


state 16

    (12) stms -> stm .
    (13) stms -> stm . stms
    (12) stms -> . stm
    (13) stms -> . stm stms
    (17) stm -> . exp SEMI
    (18) stm -> . WHILE exp bodyorstm
    (19) stm -> . IF exp bodyorstm
    (20) stm -> . IF exp bodyorstm ELSE stm
    (21) stm -> . FOR ID IN stm2 body
    (22) stm -> . FOR ID IN ID body
    (23) stm -> . RETURN exp SEMI
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp STAR exp
    (29) exp -> . exp CARET exp
    (30) exp -> . exp SLASH exp
    (31) exp -> . exp PERCENT exp
    (32) exp -> . exp AND exp
    (33) exp -> . exp OR exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp LE exp
    (37) exp -> . exp LT exp
    (38) exp -> . exp AS exp
    (39) exp -> . exp IS exp
    (40) exp -> . exp ISEXCLAMATION exp
    (41) exp -> . exp EQEQ exp
    (42) exp -> . exp NE exp
    (43) exp -> . exp ANDAND exp
    (44) exp -> . exp OROR exp
    (45) exp -> . exp QUESTIONQUESTION exp
    (46) exp -> . exp QUESTION exp COLON exp
    (47) exp -> . exp EQ exp
    (48) exp -> . exp STAREQ exp
    (49) exp -> . exp SLASHEQ exp
    (50) exp -> . exp PLUSEQ exp
    (51) exp -> . exp MINUSEQ exp
    (52) exp -> . exp ANDEQ exp
    (53) exp -> . exp CARETEQ exp
    (54) exp -> . call
    (55) exp -> . assign
    (56) exp -> . NUMBER
    (57) exp -> . ID
    (58) call -> . ID LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> . ID LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> . ID EQ exp

    RIGHTBRACKET    reduce using rule 12 (stms -> stm .)
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 22
    NUMBER          shift and go to state 25
    ID              shift and go to state 21

    stm                            shift and go to state 16
    stms                           shift and go to state 31
    exp                            shift and go to state 17
    call                           shift and go to state 23
    assign                         shift and go to state 24

state 17

    (17) stm -> exp . SEMI
    (26) exp -> exp . PLUS exp
    (27) exp -> exp . MINUS exp
    (28) exp -> exp . STAR exp
    (29) exp -> exp . CARET exp
    (30) exp -> exp . SLASH exp
    (31) exp -> exp . PERCENT exp
    (32) exp -> exp . AND exp
    (33) exp -> exp . OR exp
    (34) exp -> exp . GE exp
    (35) exp -> exp . GT exp
    (36) exp -> exp . LE exp
    (37) exp -> exp . LT exp
    (38) exp -> exp . AS exp
    (39) exp -> exp . IS exp
    (40) exp -> exp . ISEXCLAMATION exp
    (41) exp -> exp . EQEQ exp
    (42) exp -> exp . NE exp
    (43) exp -> exp . ANDAND exp
    (44) exp -> exp . OROR exp
    (45) exp -> exp . QUESTIONQUESTION exp
    (46) exp -> exp . QUESTION exp COLON exp
    (47) exp -> exp . EQ exp
    (48) exp -> exp . STAREQ exp
    (49) exp -> exp . SLASHEQ exp
    (50) exp -> exp . PLUSEQ exp
    (51) exp -> exp . MINUSEQ exp
    (52) exp -> exp . ANDEQ exp
    (53) exp -> exp . CARETEQ exp

    SEMI            shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    STAR            shift and go to state 35
    CARET           shift and go to state 36
    SLASH           shift and go to state 37
    PERCENT         shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    GE              shift and go to state 41
    GT              shift and go to state 42
    LE              shift and go to state 43
    LT              shift and go to state 44
    AS              shift and go to state 45
    IS              shift and go to state 46
    ISEXCLAMATION   shift and go to state 47
    EQEQ            shift and go to state 48
    NE              shift and go to state 49
    ANDAND          shift and go to state 50
    OROR            shift and go to state 51
    QUESTIONQUESTION shift and go to state 52
    QUESTION        shift and go to state 53
    EQ              shift and go to state 54
    STAREQ          shift and go to state 55
    SLASHEQ         shift and go to state 56
    PLUSEQ          shift and go to state 57
    MINUSEQ         shift and go to state 58
    ANDEQ           shift and go to state 59
    CARETEQ         shift and go to state 60


state 18

    (18) stm -> WHILE . exp bodyorstm
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp STAR exp
    (29) exp -> . exp CARET exp
    (30) exp -> . exp SLASH exp
    (31) exp -> . exp PERCENT exp
    (32) exp -> . exp AND exp
    (33) exp -> . exp OR exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp LE exp
    (37) exp -> . exp LT exp
    (38) exp -> . exp AS exp
    (39) exp -> . exp IS exp
    (40) exp -> . exp ISEXCLAMATION exp
    (41) exp -> . exp EQEQ exp
    (42) exp -> . exp NE exp
    (43) exp -> . exp ANDAND exp
    (44) exp -> . exp OROR exp
    (45) exp -> . exp QUESTIONQUESTION exp
    (46) exp -> . exp QUESTION exp COLON exp
    (47) exp -> . exp EQ exp
    (48) exp -> . exp STAREQ exp
    (49) exp -> . exp SLASHEQ exp
    (50) exp -> . exp PLUSEQ exp
    (51) exp -> . exp MINUSEQ exp
    (52) exp -> . exp ANDEQ exp
    (53) exp -> . exp CARETEQ exp
    (54) exp -> . call
    (55) exp -> . assign
    (56) exp -> . NUMBER
    (57) exp -> . ID
    (58) call -> . ID LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> . ID LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> . ID EQ exp

    NUMBER          shift and go to state 25
    ID              shift and go to state 21

    exp                            shift and go to state 61
    call                           shift and go to state 23
    assign                         shift and go to state 24

state 19

    (19) stm -> IF . exp bodyorstm
    (20) stm -> IF . exp bodyorstm ELSE stm
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp STAR exp
    (29) exp -> . exp CARET exp
    (30) exp -> . exp SLASH exp
    (31) exp -> . exp PERCENT exp
    (32) exp -> . exp AND exp
    (33) exp -> . exp OR exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp LE exp
    (37) exp -> . exp LT exp
    (38) exp -> . exp AS exp
    (39) exp -> . exp IS exp
    (40) exp -> . exp ISEXCLAMATION exp
    (41) exp -> . exp EQEQ exp
    (42) exp -> . exp NE exp
    (43) exp -> . exp ANDAND exp
    (44) exp -> . exp OROR exp
    (45) exp -> . exp QUESTIONQUESTION exp
    (46) exp -> . exp QUESTION exp COLON exp
    (47) exp -> . exp EQ exp
    (48) exp -> . exp STAREQ exp
    (49) exp -> . exp SLASHEQ exp
    (50) exp -> . exp PLUSEQ exp
    (51) exp -> . exp MINUSEQ exp
    (52) exp -> . exp ANDEQ exp
    (53) exp -> . exp CARETEQ exp
    (54) exp -> . call
    (55) exp -> . assign
    (56) exp -> . NUMBER
    (57) exp -> . ID
    (58) call -> . ID LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> . ID LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> . ID EQ exp

    NUMBER          shift and go to state 25
    ID              shift and go to state 21

    exp                            shift and go to state 62
    call                           shift and go to state 23
    assign                         shift and go to state 24

state 20

    (21) stm -> FOR . ID IN stm2 body
    (22) stm -> FOR . ID IN ID body

    ID              shift and go to state 63


state 21

    (57) exp -> ID .
    (58) call -> ID . LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> ID . LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> ID . EQ exp

  ! shift/reduce conflict for EQ resolved as shift
    SEMI            reduce using rule 57 (exp -> ID .)
    PLUS            reduce using rule 57 (exp -> ID .)
    MINUS           reduce using rule 57 (exp -> ID .)
    STAR            reduce using rule 57 (exp -> ID .)
    CARET           reduce using rule 57 (exp -> ID .)
    SLASH           reduce using rule 57 (exp -> ID .)
    PERCENT         reduce using rule 57 (exp -> ID .)
    AND             reduce using rule 57 (exp -> ID .)
    OR              reduce using rule 57 (exp -> ID .)
    GE              reduce using rule 57 (exp -> ID .)
    GT              reduce using rule 57 (exp -> ID .)
    LE              reduce using rule 57 (exp -> ID .)
    LT              reduce using rule 57 (exp -> ID .)
    AS              reduce using rule 57 (exp -> ID .)
    IS              reduce using rule 57 (exp -> ID .)
    ISEXCLAMATION   reduce using rule 57 (exp -> ID .)
    EQEQ            reduce using rule 57 (exp -> ID .)
    NE              reduce using rule 57 (exp -> ID .)
    ANDAND          reduce using rule 57 (exp -> ID .)
    OROR            reduce using rule 57 (exp -> ID .)
    QUESTIONQUESTION reduce using rule 57 (exp -> ID .)
    QUESTION        reduce using rule 57 (exp -> ID .)
    STAREQ          reduce using rule 57 (exp -> ID .)
    SLASHEQ         reduce using rule 57 (exp -> ID .)
    PLUSEQ          reduce using rule 57 (exp -> ID .)
    MINUSEQ         reduce using rule 57 (exp -> ID .)
    ANDEQ           reduce using rule 57 (exp -> ID .)
    CARETEQ         reduce using rule 57 (exp -> ID .)
    WHILE           reduce using rule 57 (exp -> ID .)
    IF              reduce using rule 57 (exp -> ID .)
    FOR             reduce using rule 57 (exp -> ID .)
    RETURN          reduce using rule 57 (exp -> ID .)
    LEFTBRACKET     reduce using rule 57 (exp -> ID .)
    NUMBER          reduce using rule 57 (exp -> ID .)
    ID              reduce using rule 57 (exp -> ID .)
    COLON           reduce using rule 57 (exp -> ID .)
    COMMA           reduce using rule 57 (exp -> ID .)
    RIGHTPARENTHESES reduce using rule 57 (exp -> ID .)
    DOTDOT          reduce using rule 57 (exp -> ID .)
    LEFTPARENTHESES shift and go to state 64
    EQ              shift and go to state 28

  ! EQ              [ reduce using rule 57 (exp -> ID .) ]


state 22

    (23) stm -> RETURN . exp SEMI
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp STAR exp
    (29) exp -> . exp CARET exp
    (30) exp -> . exp SLASH exp
    (31) exp -> . exp PERCENT exp
    (32) exp -> . exp AND exp
    (33) exp -> . exp OR exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp LE exp
    (37) exp -> . exp LT exp
    (38) exp -> . exp AS exp
    (39) exp -> . exp IS exp
    (40) exp -> . exp ISEXCLAMATION exp
    (41) exp -> . exp EQEQ exp
    (42) exp -> . exp NE exp
    (43) exp -> . exp ANDAND exp
    (44) exp -> . exp OROR exp
    (45) exp -> . exp QUESTIONQUESTION exp
    (46) exp -> . exp QUESTION exp COLON exp
    (47) exp -> . exp EQ exp
    (48) exp -> . exp STAREQ exp
    (49) exp -> . exp SLASHEQ exp
    (50) exp -> . exp PLUSEQ exp
    (51) exp -> . exp MINUSEQ exp
    (52) exp -> . exp ANDEQ exp
    (53) exp -> . exp CARETEQ exp
    (54) exp -> . call
    (55) exp -> . assign
    (56) exp -> . NUMBER
    (57) exp -> . ID
    (58) call -> . ID LEFTPARENTHESES params RIGHTPARENTHESES
    (59) call -> . ID LEFTPARENTHESES RIGHTPARENTHESES
    (62) assign -> . ID EQ exp

    NUMBER          shift and go to state 25
    ID              shift and go to state 21

    exp                            shift and go to state 65
    call                           shift and go to state 23
    assign                         shift and go to state 24

state 23

    (54) exp -> call .

    SEMI            reduce using rule 54 (exp -> call .)
    PLUS            reduce using rule 54 (exp -> call .)
    MINUS           reduce using rule 54 (exp -> call .)
    STAR            reduce using rule 54 (exp -> call .)
    CARET           reduce using rule 54 (exp -> call .)
    SLASH           reduce using rule 54 (exp -> call .)
    PERCENT         reduce using rule 54 (exp -> call .)
    AND             reduce using rule 54 (exp -> call .)
    OR              reduce using rule 54 (exp -> call .)
    GE              reduce using rule 54 (exp -> call .)
    GT              reduce using rule 54 (exp -> call .)
    LE              reduce using rule 54 (exp -> call .)
    LT              reduce using rule 54 (exp -> call .)
    AS              reduce using rule 54 (exp -> call .)
    IS              reduce using rule 54 (exp -> call .)
    ISEXCLAMATION   reduce using rule 54 (exp -> call .)
    EQEQ            reduce using rule 54 (exp -> call .)
    NE              reduce using rule 54 (exp -> call .)
    ANDAND          reduce using rule 54 (exp -> call .)
    OROR            reduce using rule 54 (exp -> call .)
    QUESTIONQUESTION reduce using rule 54 (exp -> call .)
    QUESTION        reduce using rule 54 (exp -> call .)
    EQ              reduce using rule 54 (exp -> call .)
    STAREQ          reduce using rule 54 (exp -> call .)
    SLASHEQ         reduce using rule 54 (exp -> call .)
    PLUSEQ          reduce using rule 54 (exp -> call .)
    MINUSEQ         reduce using rule 54 (exp -> call .)
    ANDEQ           reduce using rule 54 (exp -> call .)
    CARETEQ         reduce using rule 54 (exp -> call .)
    WHILE           reduce using rule 54 (exp -> call .)
    IF              reduce using rule 54 (exp -> call .)
    FOR             reduce using rule 54 (exp -> call .)
    RETURN          reduce using rule 54 (exp -> call .)
    LEFTBRACKET     reduce using rule 54 (exp -> call .)
    NUMBER          reduce using rule 54 (exp -> call .)
    ID              reduce using rule 54 (exp -> call .)
    COLON           reduce using rule 54 (exp -> call .)
    COMMA           reduce using rule 54 (exp -> call .)
    RIGHTPARENTHESES reduce using rule 54 (exp -> call .)
    DOTDOT          reduce using rule 54 (exp -> call .)


state 24

    (55) exp -> assign .
